# ivycode

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROMPT_SPEC.md  README.md  SECURITY.md  pyproject.toml  ru_README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: SKILLS_UX_IMPROVEMENTS_v0.5.0.md
docs/screenshots/agents-v0.7.0/: plan.txt
docs/screenshots/skills-v0.6.0/: error-fs-read-file.txt  inspect-fs-write-file.txt  list.txt  (+1 more)
ivycode/: __init__.py  __main__.py
ivycode/agents/: __init__.py  base.py  mediator.py  router.py
ivycode/cli/: __init__.py  app.py
ivycode/codegraph/: __init__.py  projection.py  service.py  snapshot.py
ivycode/core/: __init__.py  envelope.py  settings.py
ivycode/providers/: base.py  factory.py  http_provider.py  profile.py
ivycode/skills/: __init__.py  registry.py  runtime.py  store.py
ivycode/ui/: __init__.py  console.py  layout.py  theme.py
tests/unit/: test_agents_architect.py  test_agents_mediator.py  test_agents_router.py  test_cli.py  test_cli_plan.py  test_cli_skills.py  test_codegraph_projection.py  test_codegraph_service.py  test_codegraph_snapshot.py  test_envelope.py  test_http_provider.py  test_model_panel.py  test_openai_chat_codec.py  test_provider_base.py  test_provider_profile.py  test_settings.py  test_skill_fs.py  test_skill_graph.py  test_skill_registry.py  test_skill_store.py  test_ui_console.py  test_ui_layout.py  test_ui_theme.py
(+27 files in other folders)
